--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  masonstevenson-dev
-youtube_username: @masonstevenson-dev
+youtube_username: "@masonstevenson-dev"
 
 # Build settings
 theme: minima
