switch to remote theme

--- a/_config.yml
+++ b/_config.yml
@@ -28,9 +28,12 @@ github_username:  masonstevenson-dev
 youtube_username: "@masonstevenson-dev"
 
 # Build settings
-theme: minimal-mistakes-jekyll
+# theme: minimal-mistakes-jekyll
+remote_theme: "mmistakes/minimal-mistakes@4.27.3"
+
 plugins:
   - jekyll-feed
+  - jekyll-include-cache
 
 # Exclude from processing.
 # The following items will not be processed, by default.
