--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -23,10 +23,14 @@ docs:
         url: /posts/2024-04-03-WorldPartitionUnloadFix/
       - title: "What Exactly does 'Compute Skin Cache' Do?"
         url: /posts/2024-03-12-SkinCache/
+      - title: "Creating a JSON Driven Topnet in Houdini"
+        url: /posts/2024-01-29-HoudiniJsonLoader/
   - title: "2023"
     children:
       - title: "UE Stats System Woes"
         url: /posts/2023-11-17-PeriodicLogging/
+      - title: "Project Diary: Creating a Donut with Procedural Sprinkles"
+        url: /posts/2023-10-12-DonutProjectDiary/
       - title: "UE Widget Focus vs Hover States"
         url: /posts/2023-09-26-FocusVsHover/
       - title: "Gameplay Ability System (GAS) in UE5"
@@ -35,6 +39,8 @@ docs:
         url: /posts/2023-09-10-InputRoutingDeepDive/
       - title: "UE5 - How to Fix C++ Defined Gameplay Tags Disappearing from Project Settings"
         url: /posts/2023-09-08-GameplayTagsFix/
+      - title: "Setting up an Autorigger for Metahumans"
+        url: /posts/2023-08-17-MetahumanAutorigger/
   - title: "2022"
     children:
       - title: "2022 Epic Mega Jam"
