update main page and start portfolio migration

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,3 +1,11 @@
+main:
+  - title: "About"
+    url: /
+  - title: "Blog"
+    url: /blog/
+  - title: "Portfolio"
+    url: /portfolio/
+
 docs:
   - title: "2025"
     children:
